--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-first-project",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "start:dev": "nodemon ../src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,10 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.2.3"
+    "express": "^4.19.2",
+    "mongoose": "^8.2.3",
+    "nodemon": "^3.1.0"
   },
   "type": "module"
 }
