--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "my-first-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start:dev": "nodemon ../src/server.js",
+    "start:dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
