--- a/src/tasks.json
+++ b/src/tasks.json
@@ -1,11 +1,26 @@
 [
   {
+    "id": 1,
+    "description": "Sample task 2",
+    "status": "Complete"
+  },
+  {
     "id": 2,
     "description": "Sample task 2",
     "status": "Complete"
   },
   {
     "id": 3,
+    "description": "Sample task 2",
+    "status": "Complete"
+  },
+  {
+    "id": 4,
+    "description": "Sample task 2",
+    "status": "Complete"
+  },
+  {
+    "id": 5,
     "description": "Sample task 3",
     "status": "Incomplete"
   }
